Blog Alternate: Fix Potential Misalignment With Fallback Image & Improve Responsiveness

--- a/widgets/blog/styles/alternate.less
+++ b/widgets/blog/styles/alternate.less
@@ -59,8 +59,12 @@
 		width: 100%;
 
 		@media (max-width: @responsive_breakpoint) {
+			display: block !important;
+
+			& > img,
 			.sow-entry-thumbnail,
 			.sow-entry-thumbnail .wp-post-image {
+				flex: 1;
 				height: auto;
 				width: 100%;
 			}
@@ -68,7 +72,9 @@
 
 		// Alternating featured image alignment.
 		@media (min-width: @responsive_breakpoint) {
+			& > img,
 			.sow-entry-thumbnail {
+				flex: 1;
 				width: 41.5006%;
 
 				a {
@@ -86,6 +92,7 @@
 		}
 
 		.sow-blog-content-wrapper {
+			flex: 1;
 			width: 58.4994%;
 
 			@media (max-width: @responsive_breakpoint) {
